[tool.poetry]
name = "aula-ao-vivo"
version = "0.1.0"
description = ""
authors = ["Lucas Silva <silva.pereira.92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
